# comicast

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  verified-deps.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: pre_mortem.md
docs/research/: F1-anthropic.md  F1-competitors.md  F1-elevenlabs.md  F1-extraction.md
scripts/: patch_dryrun_artifacts.py  patch_dryrun_s34_post_review.py  preflight_billing.py  rerun_dryrun_post_patch.ps1  rerun_dryrun_post_patch.py  resize_oversize_pages.py  run_dryrun.ps1  voice_list_all.py  voice_search_helper.py
src/comicast/: anthropic_client.py  budget.py  cli.py  elevenlabs_client.py  extract.py  learn.py  logging_setup.py  m4b.py  profile.py  review.py  schemas.py  stitch.py  tts.py  voice_assign.py
src/comicast/tools/: verify_deps.py
src/comicast/vision/: _parse.py  attribute.py  cast.py  confidence.py  narrative.py  prompts.py  thresholds.py
src/comicast/voice/: director.py
tests/fixtures/: build_synthetic_cbz.py  build_synthetic_pdf.py  synth_3pages.cbz
tests/golden/: build_golden.py  test_e2e_synthetic.py  test_extract_smoke.py  test_vision_golden.py
tests/golden/fixtures/: synth_script_golden.json
tests/property/: test_schemas_property.py
tests/unit/: test_anthropic_client.py  test_budget.py  test_cli.py  test_confidence.py  test_elevenlabs_client.py  test_extract_cbr.py  test_extract_cbz.py  test_extract_pdf.py  test_learn.py  test_logging_setup.py  test_m4b.py  test_profile.py  test_review.py  test_schemas.py  test_smoke_install.py  test_stitch.py  test_threshold_alignment.py  test_tts.py  test_vision_attribute.py  test_vision_cast.py  test_vision_cast_l2.py  test_vision_narrative.py  test_vision_parse.py  test_vision_pipeline.py  test_voice_assign.py  test_voice_director.py
