[project]
name = "comicast"
version = "0.1.0"
description = "AI-driven audiobook generator for digital comics with per-character voices"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "cesabici-bit" }]
keywords = ["comics", "tts", "ai", "audiobook", "anthropic", "elevenlabs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# CANDIDATE deps — F1 verifies each via web search → verified-deps.toml.
# Versions here are best-known-good as of 2026-05-02. F1 may bump.
dependencies = [
    "anthropic>=0.40.0",
    "elevenlabs>=1.5.0",
    "pdf2image>=1.17.0",
    "rarfile>=4.2",
    "Pillow>=10.4.0",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    "mutagen>=1.47.0",
    "pydantic>=2.9.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.112.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
comicast = "comicast.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comicast"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "-v --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: tests that hit real APIs or take >5s (deselect with '-m \"not slow\"')",
    "golden: snapshot tests requiring committed fixtures (L4)",
    "domain: domain-sanity tests with external oracles (L2)",
]

[tool.coverage.run]
source = ["src/comicast"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
